Fix cramped secondary column

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -986,6 +986,7 @@ a.button.release-theme-lock {
   margin-top: 0;
 }
 
+.addon-details .secondary,
 .category-landing .secondary,
 body:not(.developer-hub) section.secondary {
   .highlight {
